--- a/src/App.scss
+++ b/src/App.scss
@@ -425,7 +425,7 @@ section {
   text-indent: 0px;
   text-shadow: none;
   display: inline-block;
-
+  max-height:60px;
 }
 .small-btn, .small-button {
   padding: 7px 25px;
@@ -1017,7 +1017,7 @@ ol, ul,li {
     position: relative;
     svg{
       position: absolute;
-      top: 13px;
+      top: 22px;
       right: 13px;
       border-radius: 4px;
       color: #15274566;
@@ -1028,8 +1028,8 @@ ol, ul,li {
       font-weight: normal;
       position: absolute;
       pointer-events: none;
-      left: 15px;
-      top: 3px;
+      left: 13px;
+      top: 12px;
       padding: 9px 0px;
       background: #fff;
       transition: 0.2s ease all;
@@ -1993,7 +1993,7 @@ font-weight: 400;
                   font-size: 18px;
                   color: #152745;
                   width: 90%;
-                  height: 63px;
+                  height: 60px !important;
                   padding: 13px;
                   background: #fff;
                   border: 1px solid rgba(21, 39, 69, 0.30);
@@ -2093,4 +2093,8 @@ font-weight: 400;
 }
 .font-12{
   font-size: 12px !important;
+}
+.flex-row{
+  display:flex;
+  flex-direction: row;
 }
