--- a/src/App.scss
+++ b/src/App.scss
@@ -1966,6 +1966,8 @@ font-weight: 400;
         }
     
         .did-floating-input {
+          width: 294px !important;
+          height: 60px !important;
           width: 100% !important;
           padding: 13px 30px;
         }
@@ -2097,4 +2099,14 @@ font-weight: 400;
 .flex-row{
   display:flex;
   flex-direction: row;
+}
+
+
+.react-confirm-alert{
+  position: absolute;
+    top: 0px;
+    /* display: flex
+  ; */
+    height: 100%;
+    width: 100%;
 }
